--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_KEY_WEATHER = 0QI7m6zA1JR3d0WP03R3ntl8oy2O84uA
 
 REACT_APP_API_KEY_AIQ = d00b48aaccd57c819b2cc977f33905ab7b0a054f
+
+REACT_APP_API_KEY_GEO = f85f83b41afabb98b074b4fd34c06fca
